--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
     "react-md": "^1.0.19",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
