--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "apollo-client": "^1.9.3",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
     "immutability-helper": "^2.3.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
