--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "apollo-client": "^1.9.3",
+    "apollo-test-utils": "^0.3.2",
     "classnames": "^2.2.5",
+    "graphql-tools": "^2.2.1",
     "history": "^4.7.2",
     "immutability-helper": "^2.3.1",
     "lodash": "^4.17.4",
